--- a/tendencias/src/app/pages/product/product.component.html
+++ b/tendencias/src/app/pages/product/product.component.html
@@ -1,1 +1,7 @@
-<p>product works!</p>
+<p>Productos </p>
+
+<ol>
+    <ul>Nombre: Steven Guerra</ul>
+    <ul>Curso: 5to </ul>
+    <ul>Jornada: Vespertina</ul>
+</ol>
