--- a/tendencias/src/app/app.component.html
+++ b/tendencias/src/app/app.component.html
@@ -1,10 +1,3 @@
-<!-- sistema de rutas  -->
-<div class="row">
-    <div class="col-12">
-        <div class="card">
-            <div class="card-body">
-                <router-outlet></router-outlet>
-            </div>
-        </div>
-    </div>
+<div class="content" role="main">
+    <router-outlet></router-outlet>
 </div>
